--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,14 @@
+{% load static %}
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title_block %}All challanges{% endblock %}</title>
+    <link rel= "stylesheet" href="{% static "style.css" %}">
+    {% block static_files %}{% endblock %}
 </head>
 <body>
     {% block content %}
